Updated using Bob's code for decimation.  Added RTC timestamp to file system.

--- a/MagpieFW_0/.vscode/settings.json
+++ b/MagpieFW_0/.vscode/settings.json
@@ -101,7 +101,8 @@
     ],
     "cortex-debug.variableUseNaturalFormat": true,
     "files.associations": {
-        "arm_fir_decimate_fast_q31_bob.h": "c"
+        "arm_fir_decimate_fast_q31_bob.h": "c",
+        "*.txt": "c"
     }
 }
 
